# dynamodb-simple-json-api

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: aws.py  dynamodb.py  exceptions.py  logger.py  main.py  schemas.py  services.py  settings.py
app/dependencies/: auth.py  rate_limit.py
app/middlewares/: auth.py  log.py  rate_limit.py  size.py
app/models/: api_key.py  item.py
app/routers/: auth.py  item.py  record.py  schemas.py
app/services/: api_key.py  dao.py  item.py  record.py  table.py
app/utils/: aws.py  cache.py  logger.py
github/: workflows
scripts/: create-table.sh  create-user.sh  run.sh  scan-table.sh
terraform/: .terraform.lock.hcl  dynamodb.tf  main.tf
tests/: conftest.py
tests/api/: test_item.py  test_record.py
