[tool.poetry]
name = "kv-dynamodb-api"
version = "0.1.0"
description = ""
authors = ["George Zografos <georgios@secfi.com>"]
readme = "README.md"
packages = [{include = "kv_dynamodb_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.102.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
boto3 = "^1.28.35"
sentry-sdk = {extras = ["fastapi"], version = "^1.29.2"}
httpx = "^0.24.1"
gunicorn = "^21.2.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
ignore_missing_imports = true
exclude = [
    ".venv",
    "^test",
]