[tool.poetry]
name = "kv-dynamodb-api"
version = "0.1.0"
description = ""
authors = ["George Zografos <georgios@secfi.com>"]
readme = "README.md"
packages = [{include = "kv_dynamodb_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.102.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sentry-sdk = {extras = ["fastapi"], version = "^1.29.2"}
httpx = "^0.24.1"
gunicorn = "^21.2.0"
pydantic-settings = "^2.0.3"
aiobotocore = "^2.6.0"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
mypy = "^1.5.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
ignore_missing_imports = true
exclude = [
    ".venv",
    "^test",
]

# [tool.pytest.ini_options]
# log_cli = true
# log_cli_level = "DEBUG"
# log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
# log_cli_date_format = "%Y-%m-%d %H:%M:%S"